bk_ida/gobmkida/c2/gtp_owl_threaten_defense
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_owl_threaten_defense/src/interface/play_gtp.c:1870:34: error: use of undeclared identifier 'gtp_print_code_conversion'
gtp_printf( "%d", ( unsigned int)gtp_print_code_conversion[v1]); 
                                 ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_owl_threaten_defense/src/obj/2/play_gtp.o] Error 1
